--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
@@ -40,7 +40,7 @@
     </p>
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
-    {% set repaymentDate = claim.response.paymentIntention.repaymentPlan.firstPaymentDate | date %}
+    {% set repaymentDate = repaymentPlan.firstPaymentDate | date %}
     {% set paymentSchedule = repaymentPlan.paymentSchedule | renderPaymentSchedule %}
 
     <p> {{ t('You’ve offered to pay {{ claimantName }} {{ amount }} {{ paymentSchedule }} starting {{ repaymentDate }}.',
@@ -84,15 +84,14 @@
     <p>
       {{ t('You can accept or reject their offer.') }}
     </p>
-    <a href='{{ ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }) }}' class="button button-secondary">{{ t('View and respond to offer') }}</a>
+    {{ _viewAndRespondOffer(claim) }}
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     <p> {{ t('{{ defendantName }} admits they owe all the money. They’ve offered to pay you in instalments.',
         { defendantName: defendantName }) }} </p>
     <p>
       {{ t('You can accept or reject their offer.') }}
     </p>
-    <a href='{{ ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }) }}' class="button button-secondary">{{ t('View and respond to offer') }}</a>
-
+    {{ _viewAndRespondOffer(claim) }}
   {% endif %}
 {% endmacro %}
 
@@ -109,4 +108,8 @@
 
 {% macro _downloadResponseLink(claim) %}
   <a href="{{ ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download your response') }}</a>{{ t(' (PDF)') }}
+{% endmacro %}
+
+{% macro _viewAndRespondOffer(claim) %}
+  <a href='{{ ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }) }}' class="button button-secondary">{{ t('View and respond to offer') }}</a>
 {% endmacro %}
