Fix failing tests and code cleanup

--- a/src/main/features/claimant-response/views/sign-settlement-agreement.njk
+++ b/src/main/features/claimant-response/views/sign-settlement-agreement.njk
@@ -29,7 +29,7 @@
       checkboxSingle(
       form = form,
       name = 'signed',
-      option = { label: 'Please select I confirm I\`ve read and accept the terms of the agreement.', value: true }
+      option = { label: 'Please select I confirm I’ve read and accept the terms of the agreement.', value: true }
       )
       }}
 
