--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
@@ -6,10 +6,21 @@
   {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
     {{ t('You’ve admitted all of the claim and said you’ll pay the full amount immediately.') }}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    {{ t('You’ve admitted all of the claim and said you’ll pay the full amount by {{ paymentMethod }}.',
-      { paymentMethod: claim.response.paymentIntention.paymentDate | date }) }}
+    {{ t('You’ve admitted all of the claim and said you’ll pay the full amount by {{ paymentDate }}.',
+      { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     {{ t('You’ve admitted all of the claim and offered to pay the full amount in instalments.') }}
+  {% endif %}
+{% endmacro %}
+
+{% macro claimFullAdmissionForClaimantDashboard(claim) %}
+
+  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+    {{ t('The defendant admits they owe all the money. They’ve said that they will pay immediately.') }}
+  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+    {{ t('The defendant admits they owe all the money. You need to accept or reject their offer.') }}
+  {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+    {{ t('The defendant admits they owe all the money. You need to accept or reject their offer.') }}
   {% endif %}
 {% endmacro %}
 
@@ -23,7 +34,6 @@
   {% endif %}
 
   {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    {% set paymentMethod = 'immediately' %}
     <p> {{ t('You said you’ll pay {{ claimantName }} {{ amount }} before 4pm on {{ paymentDate }}.',
         { claimantName: claimantName, amount: amount, paymentDate: paymentDate }) }} </p>
     <p> {{ t('If you pay by cheque or transfer the money must be clear in their account.') }} </p>
@@ -38,10 +48,10 @@
     <p>
       {{ t('We’ll contact you when they respond.') }}
     </p>
-  {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
     {% set repaymentDate = repaymentPlan.firstPaymentDate | date %}
-    {% set paymentSchedule = repaymentPlan.paymentSchedule | renderPaymentSchedule %}
+    {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule) %}
 
     <p> {{ t('You’ve offered to pay {{ claimantName }} {{ amount }} {{ paymentSchedule }} starting {{ repaymentDate }}.',
         { claimantName: claimantName, amount: amount, paymentSchedule: paymentSchedule, repaymentDate: repaymentDate }) }} </p>
@@ -70,13 +80,13 @@
     <p> {{ t('The defendant said they’ll pay you immediately. They must make sure you have the money by 4pm on {{ paymentDate }}.',
         { paymentDate: paymentDate }) }} </p>
     <h2 class="heading-small"> {{ t('If the defendant pays you') }} </h2>
-    <p> {{ t('You need to email {{ supportMail }} to let us know. Include the date you were paid.', {supportMail: supportEmailAddress }) }} </p>
+    <p> {{ t('You need to email {{ supportMail }} to let us know. Include the date you were paid.', { supportMail: supportEmailAddress }) }} </p>
     {% if claim.response.paymentIntention.isPastPaymentDeadline %}
       <h2 class="heading-small">{{ t('What to do if they haven’t paid') }}</h2>
       <p> {{ t('If the defendant doesn’t pay you, you can request a County Court Judgment.') }} </p>
     {% else %}
       <h2 class="heading-small">{{ t('What to do if they don’t pay') }}</h2>
-      <p> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', {paymentDate: paymentDate}) }} </p>
+      <p> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', { paymentDate: paymentDate}) }} </p>
     {% endif %}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
     <p> {{ t('{{ defendantName }} admits they owe all the money. They’ve offered to pay you in full by {{ paymentDate }}.',
@@ -92,17 +102,6 @@
       {{ t('You can accept or reject their offer.') }}
     </p>
     {{ _viewAndRespondOffer(claim) }}
-  {% endif %}
-{% endmacro %}
-
-{% macro claimFullAdmissionForClaimantDashboard(claim) %}
-
-  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    {{ t('The defendant admits they owe all the money. They’ve said that they will pay immediately.') }}
-  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    {{ t('The defendant admits they owe all the money. You need to accept or reject their offer.') }}
-  {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-    {{ t('The defendant admits they owe all the money. You need to accept or reject their offer.') }}
   {% endif %}
 {% endmacro %}
 
