--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmitted.njk
@@ -32,7 +32,7 @@
   </p>
   <p> {{ t('You can accept or reject this response.') }}</p>
   <p>
-    {{ t('You need to respond before 4pm on {{ respondDate }} or your claim won’t proceed.', {respondDate: claim.respondToResponseDeadline | date}) }}
+    {{ t('You need to respond before 4pm on {{ respondDate }} or your claim won’t proceed.', { respondDate: claim.respondToResponseDeadline | date}) }}
   </p>
 {% endmacro %}
 
@@ -58,7 +58,7 @@
     {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
       {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
       {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
-      {% set paymentSchedule = repaymentPlan.paymentSchedule | renderPaymentSchedule %}
+      {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule) %}
       {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} {{ installmentAmount }} {{ paymentSchedule }} starting {{ paymentDate }}.',
         { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name,
           installmentAmount: installmentAmount, paymentSchedule: paymentSchedule, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
