--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -5,7 +5,7 @@
 
 {% from "form.njk" import csrfProtection, submitButton, errorSummary %}
 {% from "financialDetails.njk" import financialDetailsTable %}
-{% from "paymentPlan.njk" import paymentPlanTable %}
+{% from "./macro/paymentPlanTable.njk" import paymentPlanTable %}
 
 {% set claimantName = claim.claimData.claimant.name %}
 {% set reason = claim.response.statementOfMeans.reason %}
