--- a/src/main/features/claimant-response/views/sign-settlement-agreement.njk
+++ b/src/main/features/claimant-response/views/sign-settlement-agreement.njk
@@ -13,7 +13,7 @@
       {{ termsOfAgreement (
         'termsOfAgreement',
         claim.response,
-        paymentPlan.getLastPaymentDate()
+        paymentPlan
       ) }}
 
       <p>This agreement settles the claim made by Jan Clark against Mary Richards. This includes all money owed in the claim, for example court fees, expenses or interest.</p>
