--- a/src/main/views/macro/evidenceFragment.njk
+++ b/src/main/views/macro/evidenceFragment.njk
@@ -37,7 +37,7 @@
             {{ t('For example, a surveyor’s report.') }}
           </span>
           <span class="evidence-message evidence-message-CORRESPONDENCE {% if typeValue !== EvidenceType.CORRESPONDENCE.value %}hidden{% endif %}">
-            {{ t('For example, a letter from the other party describing the work they expected you to do.') }}
+            {{ t('For example, a letter from the other party.') }}
           </span>
           <span class="evidence-message evidence-message-PHOTO {% if typeValue !== EvidenceType.PHOTO.value %}hidden{% endif %}">
             {{ t('For example, a photo of the work you carried out.') }}
