--- a/src/main/features/response/views/confirmation/part-admission.njk
+++ b/src/main/features/response/views/confirmation/part-admission.njk
@@ -7,18 +7,17 @@
 {% endif %}
 
 {% if claim.response.paymentIntention %}
-  {% if claim.response.paymentIntention.paymentDate %}
-    {% set paymentDate = claim.response.paymentDate | date %}
-  {% endif %}
-  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    {% set paymentMethod = 'immediately' %}
-  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    {% set paymentMethod = 'by ' + paymentDate %}
-  {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-    {% set paymentMethod = 'by instalments' %}
-  {% endif %}
 
-  <p>{{ t('You believe you owe {{ amount }}. We’ve emailed {{ claimantName }} your offer to pay this amount {{ paymentMethod }}.', { claimantName: claimantName, paymentMethod: paymentMethod, amount: amount    }) }}</p>
+  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+    <p>{{ t('You believe you owe {{ amount }}. We’ve emailed {{ claimantName }} your offer to pay this amount immediately.',
+        { claimantName: claimantName, amount: amount }) }}</p>
+  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+    <p>{{ t('You believe you owe {{ amount }}. We’ve emailed {{ claimantName }} your offer to pay this amount by {{ paymentDate }}.',
+        { amount: amount, claimantName: claimantName, paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
+  {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+    <p>{{ t('You believe you owe {{ amount }}. We’ve emailed {{ claimantName }} your offer to pay this amount by instalments.',
+        { amount: amount, claimantName: claimantName }) }}</p>
+  {% endif %}
 
   <p>{{ t('We’ve also sent them your explanation of why you do not believe you owe the amount claimed.') }}</p>
 {% endif %}
