--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -36,7 +36,7 @@
           {
             label: 'Yes',
             value: YesNoOption.YES.option,
-            checked: (form.valueFor('accept') === YesNoOption.YES),
+            checked: (form.valueFor('accept') === YesNoOption.YES)
           },
           {
             label: 'No - I’ll suggest my own',
