--- a/src/main/features/claimant-response/views/sign-settlement-agreement.njk
+++ b/src/main/features/claimant-response/views/sign-settlement-agreement.njk
@@ -7,35 +7,50 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-    <form novalidate method="post">
-      {{ csrfProtection(csrf) }}
+      <form novalidate method="post">
+        {{ csrfProtection(csrf) }}
 
-      {{ termsOfAgreement (
-        'termsOfAgreement',
-        claim.response,
-        paymentPlan
-      ) }}
+        {{ termsOfAgreement (
+          'termsOfAgreement',
+          claim.response,
+          paymentPlan
+        ) }}
 
-      <p>This agreement settles the claim made by Jan Clark against Mary Richards. This includes all money owed in the claim, for example court fees, expenses or interest.</p>
-      <p>Neither party can make any further claims relating to this case, other than to enforce it.</p>
-      <p>Either party can view and download this agreement from their Money Claims account. Both parties should keep a copy of this agreement.</p>
+        <p>{{ t('This agreement settles the claim made by {{ claimantName }} against {{ defendantName }}. This includes all money owed in the claim, for example court fees, expenses or interest.',
+            {
+              claimantName: claim.claimData.claimant.name,
+              defendantName: claim.claimData.defendant.name
+            }
+          ) }}</p>
+        <p>{{ t('Neither party can make any further claims relating to this case, other than to enforce it.') }}</p>
+        <p>{{ t('Either party can view and download this agreement from their Money Claims account. Both parties should keep a copy of this agreement.') }}</p>
 
-      <h2 class="heading-medium">{{ t('If the agreement is broken') }}</h2>
-      <p>The claimant can request a County Court Judgment (CCJ) for any money still owed from this agreement.</p>
+        <h2 class="heading-medium">{{ t('If the agreement is broken') }}</h2>
+        <p>{{ t('The claimant can request a County Court Judgment (CCJ) for any money still owed from this agreement.') }}</p>
 
-      <h2 class="heading-medium">{{ t('Sign the agreement') }}</h2>
-      <p>Make sure this agreement includes everything you've agreed with Mary Richards before signing. You won't be able to change this later.</p>
+        <h2 class="heading-medium">{{ t('Sign the agreement') }}</h2>
+        <p>{{ t('Make sure this agreement includes everything you’ve agreed with {{ defendantName }} before signing. You won’t be able to change this later.',
+            {
+              defendantName: claim.claimData.defendant.name
+            }
+          ) }}
+        </p>
 
-      {{
-      checkboxSingle(
-      form = form,
-      name = 'signed',
-      option = { label: 'Please select I confirm I’ve read and accept the terms of the agreement.', value: true }
-      )
-      }}
+        {% set checkboxLabel = 'I confirm I’ve read and accept the terms of the agreement.' %}
 
-      {{ saveAndContinueButton() }}
-    </form>
+        {{ checkboxSingle(
+          name = 'signed',
+          option = {
+            label: checkboxLabel,
+            value: true
+          },
+          label = checkboxLabel,
+          form = form,
+          legendHidden = true
+        ) }}
+
+        {{ saveAndContinueButton() }}
+      </form>
     </div>
   </div>
 {% endblock %}
